# c-library-wrapper

./: .gitignore  CMakeLists.txt  api.js  exported_functions.txt  index.d.ts  package-lock.json  package.json
jsbuild/: c-library-wrapper.cjs.js  c-library-wrapper.esm.mjs  c-library-wrapper.esm.wasm
